Fixed gap between filter buttons with project table.

--- a/css/main.css
+++ b/css/main.css
@@ -424,7 +424,7 @@ body.modal-open {
 
 #filters ul li {
   display: inline-block;
-  margin: 20px 10px 20px 0;
+  margin: 20px 10px 0 0;
 }
 
 .filter-button {
